--- a/static/css/introHCI.css
+++ b/static/css/introHCI.css
@@ -32,3 +32,18 @@ body {
      position: absolute;
      z-index: -1;
 }
+
+/* Lab 1 CSS from slide 40 */
+img.thumbnail{
+     width: 50px;
+     height: 100px;
+     border: 1px solid #434343;
+}
+.contact-info{
+     font-size: 10pt;
+     color: #cccccc;
+}
+.project{
+     background-color: gray;
+     margin-left: 10px;
+}
